--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="fixed top-0 inset-x-0 py-6">
+    <header class="fixed top-0 inset-x-0 py-6 z-20">
         <div class="container flex justify-between items-center">
             <a href="">
                 <img src="../img/logo.svg" alt="Gold Guarenteed Coin">
@@ -24,9 +24,10 @@
             </div>
         </div>
     </header>
-    <div class="fixed top-1/2 -translate-y-1/2 inset-x-0">
+    <div class="fixed top-1/2 -translate-y-1/2 inset-x-0 z-10">
         <div class="container relative">
-            <div class="absolute top-1/2 right-0 -translate-y-1/2 w-[400px] h-[400px] bg-[rgba(90,85,79,0.2)] rounded-[1.25rem]">
+            <div
+                class="absolute top-1/2 right-0 -translate-y-1/2 w-[400px] h-[400px] bg-[rgba(90,85,79,0.2)] rounded-[1.25rem]">
                 <div class="text-[#FEC267] text-3xl font-bold absolute top-0 -translate-y-full -mt-3 left-2/3">
                     <div class="flex text-white gap-3 items-center mb-1">
                         <div class="text-[5rem] leading-[5rem]">%30</div>
@@ -40,7 +41,8 @@
                         <div class="text-[5rem] leading-[5rem]">01</div>
                         <div>May<br>2022</div>
                     </div>
-                    <button class="border-[3px] border-[#FEC267] text-[#FEC267] rounded-[0.3125rem] flex items-center justify-center gap-6 px-5 py-2 drop-shadow-[0px_10px_20px_#FEC267]">
+                    <button
+                        class="border-[3px] border-[#FEC267] text-[#FEC267] rounded-[0.3125rem] flex items-center justify-center gap-6 px-5 py-2 drop-shadow-[0px_10px_20px_#FEC267]">
                         <img src="../img/icon.svg" alt="">
                         Join now
                     </button>
@@ -51,7 +53,9 @@
             </div>
         </div>
     </div>
-    <section class="h-screen py-36 bg-[url('../img/section-1.jpg')] bg-cover bg-no-repeat bg-center">
+    <section class="h-screen py-36 relative">
+        <video src="../img/background-1.mp4" autoplay loop muted
+            class="absolute inset-0 w-full h-full object-cover"></video>
         <div class="container h-full relative">
             <div class="text-white text-8xl font-bold absolute left-0 bottom-44">
                 <div>Bringing <span class="text-[#FEC267]">Gold</span></div>
@@ -65,6 +69,21 @@
     </section>
     <section class="h-screen py-36">
         <div class="container h-full relative">
+            <div class="flex">
+                <div>
+                    <ul>
+                        <li><img src="../img/logo.svg" alt=""></li>
+                        <li><img src="" alt=""></li>
+                        <li><img src="../img/logo-3.svg" alt=""></li>
+                        <li><img src="../img/logo-4.svg" alt=""></li>
+                        <li><img src="../img/logo-5.svg" alt=""></li>
+                    </ul>
+                </div>
+                <div>
+                    Invest for the future:
+                    A Collaborative Project from Mongolia-Turkey
+                </div>
+            </div>
             <div class="flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-0">
                 <img src="../img/scroll.svg" alt="scroll">
                 Scroll
