--- a/src/index.html
+++ b/src/index.html
@@ -69,19 +69,43 @@
     </section>
     <section class="h-screen py-36">
         <div class="container h-full relative">
-            <div class="flex">
-                <div>
-                    <ul>
-                        <li><img src="../img/logo.svg" alt=""></li>
-                        <li><img src="" alt=""></li>
-                        <li><img src="../img/logo-3.svg" alt=""></li>
-                        <li><img src="../img/logo-4.svg" alt=""></li>
-                        <li><img src="../img/logo-5.svg" alt=""></li>
-                    </ul>
+            <div class="flex h-full items-center">
+                <div class="w-1/6 relative">
+                    <div
+                        class="absolute inset-y-[3px] left-[3px] right-auto bg-[#D8D8D8] w-[24px] rounded-[1.25rem] overflow-hidden">
+                        <div class="h-[15%] bg-[#44403D] rounded-[1.25rem]"></div>
+                    </div>
+                    <div class="flex flex-col gap-[3.125rem]">
+                        <div class="relative">
+                            <div class="w-[30px] h-[30px] bg-[#F2F2F2] border border-[#44403D] rounded-full"></div>
+                            <img src="../img/logo.svg" alt=""
+                                class="absolute left-11 top-1/2 -translate-y-1/2 z-10 h-10">
+                        </div>
+                        <div class="relative">
+                            <div class="w-[30px] h-[30px] bg-[#F2F2F2] border border-[#44403D] rounded-full"></div>
+                            <img src="../img/logo-2.svg" alt="" class="absolute left-11 top-1/2 -translate-y-1/2 z-10">
+                        </div>
+                        <div class="relative">
+                            <div class="w-[30px] h-[30px] bg-[#F2F2F2] border border-[#44403D] rounded-full"></div>
+                            <img src="../img/logo-3.svg" alt="" class="absolute left-11 top-1/2 -translate-y-1/2 z-10">
+                        </div>
+                        <div class="relative">
+                            <div class="w-[30px] h-[30px] bg-[#F2F2F2] border border-[#44403D] rounded-full"></div>
+                            <img src="../img/logo-4.svg" alt="" class="absolute left-11 top-1/2 -translate-y-1/2 z-10">
+                        </div>
+                        <div class="relative">
+                            <div class="w-[30px] h-[30px] bg-[#F2F2F2] border border-[#44403D] rounded-full"></div>
+                            <img src="../img/logo-5.svg" alt="" class="absolute left-11 top-1/2 -translate-y-1/2 z-10">
+                        </div>
+                    </div>
+                    <div
+                        class="absolute top-0 -translate-y-1/2 inset-x-0 mt-[0.9375rem] rounded-[30px_10px_10px_30px] bg-[#44403D] w-[12.3125rem] h-[3.75rem] drop-shadow-[0px_10px_20px_#FEC267]">
+                    </div>
                 </div>
-                <div>
-                    Invest for the future:
-                    A Collaborative Project from Mongolia-Turkey
+                <div class="w-1/2 text-[5rem] text-[#4B4743]">
+                    Invest for <span class="text-[#FEC267]">the future:</span>
+                    <br>
+                    A Collaborative Project from <span class="text-[#FEC267]">Mongolia-Turkey</span>
                 </div>
             </div>
             <div class="flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-0">
