--- a/src/index.html
+++ b/src/index.html
@@ -423,11 +423,11 @@
                                         <img src="../img/button-eye.svg" alt="">
                                         Read
                                     </button>
-                                    <button
+                                    <!-- <button
                                         class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-5 text-[#F1F1F1] rounded-lg">
                                         <img src="../img/button-download.svg" alt="">
                                         Download
-                                    </button>
+                                    </button> -->
                                 </div>
                             </div>
                             <div class="text-center">
@@ -467,11 +467,11 @@
                                 <img src="../img/button-eye.svg" alt="">
                                 Read
                             </button>
-                            <button
+                            <!-- <button
                                 class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-5 text-[#F1F1F1] rounded-lg">
                                 <img src="../img/button-download.svg" alt="">
                                 Download
-                            </button>
+                            </button> -->
                         </div>
                     </div>
                 </div>
@@ -514,19 +514,19 @@
         <div class="container">
             <h2 class="text-3xl sm:text-7xl mb-8 sm:mb-11">How to Buy <span class="text-[#FEC267]">GGC Token</span> from
                 Dashboard?</h2>
-            <div class="flex flex-col lg:flex-row items-start justify-center gap-5 mb-12 sm:mb-24">
-                <button><span class="text-[#FEC267]">1)</span> <span
-                        class="relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1">How
-                        to sign up our backoffice?</span></button>
-                <button><span class="text-[#FEC267]">2)</span> <span
-                        class="relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1">How
-                        to reset your password?</span></button>
-                <button><span class="text-[#FEC267]">3)</span> <span
-                        class="relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1">How
-                        to buy GGC Tokens?</span></button>
+            <div class="flex flex-col lg:flex-row items-start justify-center gap-5 mb-12 sm:mb-24" id="faq">
+                <button>
+                    <span class="text-[#FEC267]">1)</span> <span class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1">How to sign up our backoffice?</span>
+                </button>
+                <button>
+                    <span class="text-[#FEC267]">2)</span> <span class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1 after:hidden">How to reset your password?</span>
+                </button>
+                <button>
+                    <span class="text-[#FEC267]">3)</span> <span class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1 after:hidden">How to buy GGC Tokens?</span>
+                </button>
             </div>
             <div class="flex justify-center mb-24">
-                <video src="../img/background-1.mp4"
+                <video src="../img/cypto.mp4"
                     class="drop-shadow-[0px_10px_20px_#FEC267] rounded-[14px] w-[1138px] max-w-full object-cover aspect-video"
                     controls></video>
             </div>
