--- a/src/index.html
+++ b/src/index.html
@@ -641,7 +641,7 @@
             </div>
         </div>
     </section>
-    <footer class="bg-[#000000] text-white text-xl py-16 lg:py-32 xl:py-64">
+    <footer class="bg-[#000000] text-white text-xl py-16 lg:py-32">
         <div class="container flex flex-col sm:flex-row justify-between items-center gap-3">
             <div>
                 2022&copy; GGCM
