index.html path

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gold Guarenteed Coin</title>
-    <link rel="stylesheet" href="../dist/output.css">
-    <script src="../node_modules/gsap/dist/gsap.min.js"></script>
-    <script src="../node_modules/gsap/dist/ScrollTrigger.min.js"></script>
-    <script src="../node_modules/@lottiefiles/lottie-player/dist/lottie-player.js"></script>
+    <link rel="stylesheet" href="dist/output.css">
+    <script src="node_modules/gsap/dist/gsap.min.js"></script>
+    <script src="node_modules/gsap/dist/ScrollTrigger.min.js"></script>
+    <script src="node_modules/@lottiefiles/lottie-player/dist/lottie-player.js"></script>
     <script src="script.js"></script>
 </head>
 
@@ -34,15 +34,15 @@
                 </svg>
             </a>
             <div>
-                <button class="w-[60px] h-[60px] bg-[url('../img/menu.svg')] transition-transform" id="menu-button"></button>
+                <button class="w-[60px] h-[60px] bg-[url('img/menu.svg')] transition-transform" id="menu-button"></button>
                 <div class="absolute top-0 inset-x-0 bg-black pt-32 lg:pt-96 px-8 pb-12 -z-10 hidden" id="menu">
                     <div class="text-white [text-shadow:0px_10px_20px_#FEC267] mb-8 lg:mb-12 text-4xl font-bold">Discover</div>
                     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 mb-10 lg:mb-44 gap-5 md:gap-7">
-                        <img src="../img/menu-logo-1.svg" alt="">
-                        <img src="../img/menu-logo-2.svg" alt="">
-                        <img src="../img/menu-logo-3.svg" alt="">
-                        <img src="../img/menu-logo-4.svg" alt="">
-                        <img src="../img/menu-logo-5.svg" alt="">
+                        <img src="img/menu-logo-1.svg" alt="">
+                        <img src="img/menu-logo-2.svg" alt="">
+                        <img src="img/menu-logo-3.svg" alt="">
+                        <img src="img/menu-logo-4.svg" alt="">
+                        <img src="img/menu-logo-5.svg" alt="">
                     </div>
                     <div class="flex justify-between gap-5">
                         <div class="flex-1 flex flex-col lg:flex-row lg:items-end justify-between gap-5">
@@ -88,12 +88,12 @@
         </div>
     </header>
     <section id="s-1" class="h-screen py-12 xl:py-36 relative overflow-hidden">
-        <video src="../img/background-1.mp4" autoplay loop muted
+        <video src="img/background-1.mp4" autoplay loop muted
             class="absolute inset-0 w-full h-full object-cover"></video>
         <div class="container h-full relative">
             <div
                 class="absolute left-1/2 xl:left-auto -translate-x-1/2 xl:-translate-x-0 top-1/2 -translate-y-1/2 xl:right-40 w-[300px] xl:w-[400px] h-[330px] xl:h-[400px] bg-[rgba(90,85,79,0.2)] rounded-[1.25rem]">
-                <img src="../img/coin.png" alt="" class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 max-w-full max-h-full">
+                <img src="img/coin.png" alt="" class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 max-w-full max-h-full">
                 <div
                     class="text-[#FEC267] text-3xl font-bold absolute top-0 -translate-y-full -mt-3 left-2/3 side hidden sm:block">
                     <div class="flex text-white gap-3 items-center mb-1">
@@ -110,7 +110,7 @@
                     </div>
                     <button
                         class="border-[3px] border-[#FEC267] text-[#FEC267] rounded-[0.3125rem] flex items-center justify-center gap-6 px-5 py-2 drop-shadow-[0px_10px_20px_#FEC267]">
-                        <img src="../img/icon.svg" alt="">
+                        <img src="img/icon.svg" alt="">
                         Join now
                     </button>
                 </div>
@@ -125,7 +125,7 @@
                 <div>to the Digital Age</div>
             </div>
             <div class="hidden sm:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-8 scroll">
-                <img src="../img/scroll.svg" alt="scroll">
+                <img src="img/scroll.svg" alt="scroll">
                 Scroll
             </div>
         </div>
@@ -301,7 +301,7 @@
                                     <div class="flex justify-end">
                                         <button
                                             class="inline-flex items-center justify-center gap-4 bg-[#FEC267] border-[0.1875rem] border-[#5A554F] drop-shadow-[0px_5px_20px_#5A554F] rounded-[0.3125rem] py-1 pr-2 pl-3 clear-left">
-                                            <img src="../img/icon-dark.svg" alt="">
+                                            <img src="img/icon-dark.svg" alt="">
                                             Join now
                                         </button>
                                     </div>
@@ -355,7 +355,7 @@
                                 <div
                                     class="bg-[#E8E8E8] text-[#5A554F] rounded-[1.25rem] shadow-[0px_10px_20px_#FEC267] pt-6 sm:pt-12 pr-3 sm:pr-5 pb-3 sm:pb-6 pl-5 sm:pl-7">
                                     <h2 class="mb-2 text-xl sm:text-3xl font-bold">
-                                        <img src="../img/wallet.svg" alt=""
+                                        <img src="img/wallet.svg" alt=""
                                             class="float-right mb-5 sm:mb-10 ml-5 sm:ml-10 w-[80px] sm:h-auto">
                                         <span class="text-[#FEC267]">GGC</span> Pay combines the best features of a
                                         <span class="text-[#FEC267]">payments platform and an exchange</span>.
@@ -370,7 +370,7 @@
                     </div>
                 </div>
                 <div class="hidden xl:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-8 scroll">
-                    <img src="../img/scroll.svg" alt="scroll">
+                    <img src="img/scroll.svg" alt="scroll">
                     Scroll
                 </div>
             </div>
@@ -397,13 +397,13 @@
                                         <h4 class="text-[#5A554F] mb-1">Tx ID</h4>
                                         <div class="inline-flex items-center gap-1">
                                             0x29...e9d
-                                            <img src="../img/eye.svg" alt="">
+                                            <img src="img/eye.svg" alt="">
                                         </div>
                                     </div>
                                     <div>
                                         <h4 class="text-[#5A554F] mb-1">Currency</h4>
                                         <div class="inline-flex items-center gap-1">
-                                            <img src="../img/curreny.svg" alt="">
+                                            <img src="img/curreny.svg" alt="">
                                             1,04
                                         </div>
                                     </div>
@@ -420,25 +420,25 @@
                                 <div class="flex justify-between">
                                     <button
                                         class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-[0.875rem] text-[#F1F1F1] rounded-lg">
-                                        <img src="../img/button-eye.svg" alt="">
+                                        <img src="img/button-eye.svg" alt="">
                                         Read
                                     </button>
                                     <!-- <button
                                         class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-5 text-[#F1F1F1] rounded-lg">
-                                        <img src="../img/button-download.svg" alt="">
+                                        <img src="img/button-download.svg" alt="">
                                         Download
                                     </button> -->
                                 </div>
                             </div>
                             <div class="text-center">
                                 <h3 class="text-[#D8D8D8] text-3xl font-bold mb-9">Coming soon!</h3>
-                                <img src="../img/phone.png" alt="" class="w-[233px]">
+                                <img src="img/phone.png" alt="" class="w-[233px]">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="hidden xl:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-0">
-                    <img src="../img/scroll.svg" alt="scroll">
+                    <img src="img/scroll.svg" alt="scroll">
                     Scroll
                 </div>
             </div>
@@ -464,12 +464,12 @@
                         <div class="flex gap-9">
                             <button
                                 class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-[0.875rem] text-[#F1F1F1] rounded-lg">
-                                <img src="../img/button-eye.svg" alt="">
+                                <img src="img/button-eye.svg" alt="">
                                 Read
                             </button>
                             <!-- <button
                                 class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-5 text-[#F1F1F1] rounded-lg">
-                                <img src="../img/button-download.svg" alt="">
+                                <img src="img/button-download.svg" alt="">
                                 Download
                             </button> -->
                         </div>
@@ -478,7 +478,7 @@
                 <div class="hidden lg:block flex-1"></div>
             </div>
             <div class="hidden xl:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-0">
-                <img src="../img/scroll.svg" alt="scroll">
+                <img src="img/scroll.svg" alt="scroll">
                 Scroll
             </div>
         </div>
@@ -486,27 +486,27 @@
             id="wheel-1">
             <div class="inline-flex items-center gap-28">
                 <div class="text-[#FEC267]">Gold</div>
-                <img class="block" src="../img/arrow.svg" alt="">
+                <img class="block" src="img/arrow.svg" alt="">
                 <div class="text-white">NFT</div>
-                <img class="block" src="../img/arrow.svg" alt="">
+                <img class="block" src="img/arrow.svg" alt="">
             </div>
             <div class="inline-flex items-center gap-28">
                 <div class="text-[#FEC267]">Gold</div>
-                <img class="block" src="../img/arrow.svg" alt="">
+                <img class="block" src="img/arrow.svg" alt="">
                 <div class="text-white">NFT</div>
-                <img class="block" src="../img/arrow.svg" alt="">
+                <img class="block" src="img/arrow.svg" alt="">
             </div>
             <div class="inline-flex items-center gap-28">
                 <div class="text-[#FEC267]">Gold</div>
-                <img class="block" src="../img/arrow.svg" alt="">
+                <img class="block" src="img/arrow.svg" alt="">
                 <div class="text-white">NFT</div>
-                <img class="block" src="../img/arrow.svg" alt="">
+                <img class="block" src="img/arrow.svg" alt="">
             </div>
             <div class="inline-flex items-center gap-28">
                 <div class="text-[#FEC267]">Gold</div>
-                <img class="block" src="../img/arrow.svg" alt="">
+                <img class="block" src="img/arrow.svg" alt="">
                 <div class="text-white">NFT</div>
-                <img class="block" src="../img/arrow.svg" alt="">
+                <img class="block" src="img/arrow.svg" alt="">
             </div>
         </div>
     </section>
@@ -526,7 +526,7 @@
                 </button>
             </div>
             <div class="flex justify-center mb-24">
-                <video src="../img/cypto.mp4"
+                <video src="img/cypto.mp4"
                     class="drop-shadow-[0px_10px_20px_#FEC267] rounded-[14px] w-[1138px] max-w-full object-cover aspect-video"
                     controls></video>
             </div>
@@ -540,7 +540,7 @@
             <div class="flex justify-center">
                 <a href="#"
                     class="text-xl sm:text-6xl text-[#FEC267] drop-shadow-[0px_10px_20px_#FEC267] border-4 sm:border-[5px] border-[#FEC267] inline-flex items-center gap-3 sm:gap-20 py-2 sm:py-4 pl-6 sm:pl-16 pr-8 sm:pr-24 rounded-[20px]">
-                    <img src="../img/button-eye-giant.svg" alt="" class="w-[45px]">
+                    <img src="img/button-eye-giant.svg" alt="" class="w-[45px]">
                     Sign up today
                 </a>
             </div>
@@ -549,7 +549,7 @@
     <section class="py-12 sm:py-36 bg-[#020202] text-white">
         <div class="container flex flex-col lg:flex-row-reverse items-center gap-24">
             <div>
-                <img src="../img/gold.png" alt="">
+                <img src="img/gold.png" alt="">
             </div>
             <div class="text-[#D8D8D8]">
                 <h2 class="text-[#FEC267] text-3xl sm:text-6xl mb-2 sm:mb-4">"An Exciting And Innovative Blockchain
@@ -616,9 +616,9 @@
             <div
                 class="hidden xl:flex items-center -rotate-90 absolute inset-y-0 left-1/2 -translate-x-1/2 gap-28 text-8xl whitespace-nowrap">
                 <span>Cryptocurrency</span>
-                <img src="../img/arrow-2.svg" alt="">
+                <img src="img/arrow-2.svg" alt="">
                 <span>Real Mining</span>
-                <img src="../img/arrow-2.svg" alt="">
+                <img src="img/arrow-2.svg" alt="">
             </div>
         </div>
     </section>
@@ -628,10 +628,10 @@
                 Join for
             </div>
             <div>
-                <img src="../img/wheel/1.svg" alt="">
-                <img src="../img/wheel/2.svg" alt="">
-                <img src="../img/wheel/3.svg" alt="">
-                <img src="../img/wheel/4.svg" alt="">
+                <img src="img/wheel/1.svg" alt="">
+                <img src="img/wheel/2.svg" alt="">
+                <img src="img/wheel/3.svg" alt="">
+                <img src="img/wheel/4.svg" alt="">
             </div>
             <div class="text-5xl md:text-7xl xl:text-9xl">
                 <span
