--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
                 <div>Bringing <span class="text-[#FEC267]">Gold</span></div>
                 <div>to the Digital Age</div>
             </div>
-            <div class="hidden sm:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-8 scroll">
+            <!-- <div class="hidden sm:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-8 scroll">
                 <img src="img/scroll.svg" alt="scroll">
                 Scroll
-            </div>
+            </div> -->
         </div>
     </section>
     <main class="relative">
@@ -369,10 +369,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="hidden xl:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-8 scroll">
+                <!-- <div class="hidden xl:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-8 scroll">
                     <img src="img/scroll.svg" alt="scroll">
                     Scroll
-                </div>
+                </div> -->
             </div>
         </section>
         <section id="s-3" class="xl:h-screen py-12 xl:py-36 bg-[#020202]">
@@ -437,10 +437,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="hidden xl:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-0">
+                <!-- <div class="hidden xl:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-0">
                     <img src="img/scroll.svg" alt="scroll">
                     Scroll
-                </div>
+                </div> -->
             </div>
         </section>
     </main>
@@ -477,10 +477,10 @@
                 </div>
                 <div class="hidden lg:block flex-1"></div>
             </div>
-            <div class="hidden xl:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-0">
+            <!-- <div class="hidden xl:flex items-center gap-2 text-[#5A554F] absolute bottom-0 left-0">
                 <img src="img/scroll.svg" alt="scroll">
                 Scroll
-            </div>
+            </div> -->
         </div>
         <div class="hidden xl:flex items-center -rotate-90 absolute inset-y-0 left-1/2 -translate-x-1/2 gap-28 text-8xl w-max"
             id="wheel-1">
@@ -714,7 +714,7 @@
                 Made with <span class="text-[#FEC267]">KAF</span>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 
 </html>
