section 1 responsive fix

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 </div>
             </div>
             <div
-                class="text-white text-3xl md:text-6xl xl:text-8xl font-bold absolute left-8 xl:left-0 bottom-0 md:bottom-10 xl:bottom-44">
+                class="text-white text-3xl md:text-6xl 2xl:text-8xl font-bold absolute left-8 xl:left-0 bottom-0 md:bottom-10 mg:bottom-44">
                 <div>Bringing <span class="text-[#FEC267]">Gold</span></div>
                 <div>to the Digital Age</div>
             </div>
