--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
                 </svg>
             </a>
             <div>
-                <button class="w-[60px] h-[60px] bg-[url('img/menu.svg')] transition-transform" id="menu-button"></button>
+                <button class="w-[60px] h-[60px] bg-[url('img/menu.svg')] transition-transform"
+                    id="menu-button"></button>
                 <div class="absolute top-0 inset-x-0 bg-black pt-32 lg:pt-96 px-8 pb-12 -z-10 hidden" id="menu">
-                    <div class="text-white [text-shadow:0px_10px_20px_#FEC267] mb-8 lg:mb-12 text-4xl font-bold">Discover</div>
+                    <div class="text-white [text-shadow:0px_10px_20px_#FEC267] mb-8 lg:mb-12 text-4xl font-bold">
+                        Discover</div>
                     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 mb-10 lg:mb-44 gap-5 md:gap-7">
                         <img src="img/menu-logo-1.svg" alt="">
                         <img src="img/menu-logo-2.svg" alt="">
@@ -46,7 +48,8 @@
                     </div>
                     <div class="flex justify-between gap-5">
                         <div class="flex-1 flex flex-col lg:flex-row lg:items-end justify-between gap-5">
-                            <div class="uppercase text-[#5A554F] [text-shadow:0px_5px_20px_#5A554F] md:text-xl lg:text-3xl">
+                            <div
+                                class="uppercase text-[#5A554F] [text-shadow:0px_5px_20px_#5A554F] md:text-xl lg:text-3xl">
                                 Legal
                             </div>
                             <ul class="text-[#D8D8D8] text-sm md:text-lg lg:text-xl space-y-2">
@@ -57,7 +60,8 @@
                             </ul>
                         </div>
                         <div class="flex-1 flex flex-col lg:flex-row lg:items-end gap-5">
-                            <div class="uppercase text-[#5A554F] [text-shadow:0px_5px_20px_#5A554F] md:text-xl lg:text-3xl">
+                            <div
+                                class="uppercase text-[#5A554F] [text-shadow:0px_5px_20px_#5A554F] md:text-xl lg:text-3xl">
                                 Support
                             </div>
                             <ul class="text-[#D8D8D8] text-sm md:text-lg lg:text-xl space-y-2">
@@ -68,7 +72,8 @@
                             </ul>
                         </div>
                         <div class="flex-1 flex flex-col lg:flex-row lg:items-end gap-5">
-                            <div class="uppercase text-[#5A554F] [text-shadow:0px_5px_20px_#5A554F] md:text-xl lg:text-3xl">
+                            <div
+                                class="uppercase text-[#5A554F] [text-shadow:0px_5px_20px_#5A554F] md:text-xl lg:text-3xl">
                                 Contract
                             </div>
                             <ul class="text-[#D8D8D8] text-sm md:text-lg lg:text-xl space-y-2">
@@ -82,8 +87,11 @@
                 </div>
             </div>
             <div class="flex gap-3">
-                <button class="text-[#D8D8D8] border-[1.5px] border-[#D8D8D8] px-4 py-2 rounded-[5px]" id="button-login">Login</button>
-                <button class="bg-[#FEC267] border-[3px] border-[#FEC267] rounded-[5px] px-4 py-2 text-[#4B4743] text-[0.9375rem] hidden sm:block" id="button-sign-up">Sign up</button>
+                <button class="text-[#D8D8D8] border-[1.5px] border-[#D8D8D8] px-4 py-2 rounded-[5px]"
+                    id="button-login">Login</button>
+                <button
+                    class="bg-[#FEC267] border-[3px] border-[#FEC267] rounded-[5px] px-4 py-2 text-[#4B4743] text-[0.9375rem] hidden sm:block"
+                    id="button-sign-up">Sign up</button>
             </div>
         </div>
     </header>
@@ -93,7 +101,8 @@
         <div class="container h-full relative">
             <div
                 class="absolute left-1/2 xl:left-auto -translate-x-1/2 xl:-translate-x-0 top-1/2 -translate-y-1/2 xl:right-40 w-[300px] xl:w-[400px] h-[330px] xl:h-[400px] bg-[rgba(90,85,79,0.2)] rounded-[1.25rem]">
-                <img src="img/coin.png" alt="" class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 max-w-full max-h-full">
+                <img src="img/coin.png" alt=""
+                    class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 max-w-full max-h-full">
                 <div
                     class="text-[#FEC267] text-3xl font-bold absolute top-0 -translate-y-full -mt-3 left-2/3 side hidden sm:block">
                     <div class="flex text-white gap-3 items-center mb-1">
@@ -482,31 +491,30 @@
                 Scroll
             </div> -->
         </div>
-        <div class="hidden xl:flex items-center -rotate-90 absolute inset-y-0 left-1/2 -translate-x-1/2 gap-28 text-8xl w-max"
-            id="wheel-1">
-            <div class="inline-flex items-center gap-28">
-                <div class="text-[#FEC267]">Gold</div>
-                <img class="block" src="img/arrow.svg" alt="">
-                <div class="text-white">NFT</div>
-                <img class="block" src="img/arrow.svg" alt="">
+        <div class="hidden xl:block absolute left-1/2 -translate-x-1/2 inset-y-0 aspect-square -rotate-90 text-8xl whitespace-nowrap overflow-hidden" id="wheel-1">
+            <div class="pl-28 absolute top-1/2 -translate-y-1/2 left-0 -translate-x-full">
+                <div class="w-max flex items-center gap-28">
+                    <div class="text-[#FEC267]">Gold</div>
+                    <img src="img/arrow.svg" alt="">
+                    <div class="text-white">NFT</div>
+                    <img src="img/arrow.svg" alt="">
+                </div>
             </div>
-            <div class="inline-flex items-center gap-28">
-                <div class="text-[#FEC267]">Gold</div>
-                <img class="block" src="img/arrow.svg" alt="">
-                <div class="text-white">NFT</div>
-                <img class="block" src="img/arrow.svg" alt="">
+            <div class="pl-28 absolute top-1/2 -translate-y-1/2 left-0">
+                <div class="w-max flex items-center gap-28">
+                    <div class="text-[#FEC267]">Gold</div>
+                    <img src="img/arrow.svg" alt="">
+                    <div class="text-white">NFT</div>
+                    <img src="img/arrow.svg" alt="">
+                </div>
             </div>
-            <div class="inline-flex items-center gap-28">
-                <div class="text-[#FEC267]">Gold</div>
-                <img class="block" src="img/arrow.svg" alt="">
-                <div class="text-white">NFT</div>
-                <img class="block" src="img/arrow.svg" alt="">
-            </div>
-            <div class="inline-flex items-center gap-28">
-                <div class="text-[#FEC267]">Gold</div>
-                <img class="block" src="img/arrow.svg" alt="">
-                <div class="text-white">NFT</div>
-                <img class="block" src="img/arrow.svg" alt="">
+            <div class="pl-28 absolute top-1/2 -translate-y-1/2 left-0 translate-x-full">
+                <div class="w-max flex items-center gap-28">
+                    <div class="text-[#FEC267]">Gold</div>
+                    <img src="img/arrow.svg" alt="">
+                    <div class="text-white">NFT</div>
+                    <img src="img/arrow.svg" alt="">
+                </div>
             </div>
         </div>
     </section>
@@ -516,13 +524,19 @@
                 Dashboard?</h2>
             <div class="flex flex-col lg:flex-row items-start justify-center gap-5 mb-12 sm:mb-24" id="faq">
                 <button>
-                    <span class="text-[#FEC267]">1)</span> <span class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1">How to sign up our backoffice?</span>
+                    <span class="text-[#FEC267]">1)</span> <span
+                        class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1">How
+                        to sign up our backoffice?</span>
                 </button>
                 <button>
-                    <span class="text-[#FEC267]">2)</span> <span class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1 after:hidden">How to reset your password?</span>
+                    <span class="text-[#FEC267]">2)</span> <span
+                        class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1 after:hidden">How
+                        to reset your password?</span>
                 </button>
                 <button>
-                    <span class="text-[#FEC267]">3)</span> <span class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1 after:hidden">How to buy GGC Tokens?</span>
+                    <span class="text-[#FEC267]">3)</span> <span
+                        class="yellow-line relative after:content-[' '] after:absolute after:top-full after:left-0 after:w-full after:h-[3px] after:shadow-[0px_10px_20px_#FEC267] after:bg-[#FEC267] after:translate-y-1 after:hidden">How
+                        to buy GGC Tokens?</span>
                 </button>
             </div>
             <div class="flex justify-center mb-24">
@@ -567,7 +581,7 @@
             </div>
         </div>
     </section>
-    <section class="py-12 lg:py-0 bg-white text-black ">
+    <section class="py-12 lg:py-0 bg-white text-black relative">
         <div class="container flex flex-col lg:flex-row justify-around items-center relative gap-8">
             <div class="lg:w-1/3 flex flex-col gap-8">
                 <div
@@ -613,12 +627,31 @@
                     </p>
                 </div>
             </div>
-            <div
-                class="hidden xl:flex items-center -rotate-90 absolute inset-y-0 left-1/2 -translate-x-1/2 gap-28 text-8xl whitespace-nowrap">
-                <span>Cryptocurrency</span>
-                <img src="img/arrow-2.svg" alt="">
-                <span>Real Mining</span>
-                <img src="img/arrow-2.svg" alt="">
+        </div>
+        <div class="hidden xl:block absolute left-1/2 -translate-x-1/2 inset-y-0 aspect-square -rotate-90 text-8xl whitespace-nowrap overflow-hidden" id="wheel-2">
+            <div class="pl-11 absolute top-1/2 -translate-y-1/2 left-0 -translate-x-full">
+                <div class="w-max flex items-center gap-11">
+                    <img src="img/arrow-2.svg" alt="">
+                    <span>Cryptocurrency</span>
+                    <img src="img/arrow-2.svg" alt="">
+                    <span>Real Mining</span>
+                </div>
+            </div>
+            <div class="pl-11 absolute top-1/2 -translate-y-1/2 left-0">
+                <div class="w-max flex items-center gap-11">
+                    <img src="img/arrow-2.svg" alt="">
+                    <span>Cryptocurrency</span>
+                    <img src="img/arrow-2.svg" alt="">
+                    <span>Real Mining</span>
+                </div>
+            </div>
+            <div class="pl-11 absolute top-1/2 -translate-y-1/2 left-0 translate-x-full">
+                <div class="w-max flex items-center gap-11">
+                    <img src="img/arrow-2.svg" alt="">
+                    <span>Cryptocurrency</span>
+                    <img src="img/arrow-2.svg" alt="">
+                    <span>Real Mining</span>
+                </div>
             </div>
         </div>
     </section>
