--- a/index.html
+++ b/index.html
@@ -78,20 +78,24 @@
                             </div>
                             <ul class="text-[#D8D8D8] text-sm md:text-lg lg:text-xl space-y-2">
                                 <li><a href="#">Facebook</a></li>
-                                <li><a href="#">Instagram</a></li>
-                                <li><a href="#">Twitter</a></li>
-                                <li><a href="#">E-Mail</a></li>
+                                <li><a href="https://www.instagram.com/ggcm.official/?igshid=YmMyMTA2M2Y=">Instagram</a></li>
+                                <li><a href="https://twitter.com/GoldGuaranteed">Twitter</a></li>
+                                <li><a href = "mailto: info@ggcm.io">E-Mail</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="flex gap-3">
-                <button class="text-[#D8D8D8] border-[1.5px] border-[#D8D8D8] px-4 py-2 rounded-[5px]"
+                <a href="https://www.dashboard.ggcm.io/">
+                    <button class="text-[#D8D8D8] border-[1.5px] border-[#D8D8D8] px-4 py-2 rounded-[5px]"
                     id="button-login">Login</button>
-                <button
+                </a>
+                <a href="https://www.dashboard.ggcm.io/">
+                    <button
                     class="bg-[#FEC267] border-[3px] border-[#FEC267] rounded-[5px] px-4 py-2 text-[#4B4743] text-[0.9375rem] hidden sm:block"
                     id="button-sign-up">Sign up</button>
+                </a>
             </div>
         </div>
     </header>
@@ -117,11 +121,13 @@
                         <div class="text-[5rem] leading-[5rem]">01</div>
                         <div>May<br>2022</div>
                     </div>
-                    <button
+                    <a href="https://www.dashboard.ggcm.io/">
+                        <button
                         class="border-[3px] border-[#FEC267] text-[#FEC267] rounded-[0.3125rem] flex items-center justify-center gap-6 px-5 py-2 drop-shadow-[0px_10px_20px_#FEC267]">
                         <img src="img/icon.svg" alt="">
                         Join now
                     </button>
+                    </a>
                 </div>
                 <div
                     class="text-[#FEC267] text-3xl font-bold absolute top-full left-1/3 mt-7 whitespace-nowrap side hidden sm:block">
@@ -308,11 +314,14 @@
                                         by launching a blockchain-based token that brings real gold ownership to an
                                         investor's portfolio.</p>
                                     <div class="flex justify-end">
-                                        <button
+                                        <a href="https://www.dashboard.ggcm.io/">
+                                            <button
                                             class="inline-flex items-center justify-center gap-4 bg-[#FEC267] border-[0.1875rem] border-[#5A554F] drop-shadow-[0px_5px_20px_#5A554F] rounded-[0.3125rem] py-1 pr-2 pl-3 clear-left">
                                             <img src="img/icon-dark.svg" alt="">
                                             Join now
                                         </button>
+                                        </a>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -427,11 +436,13 @@
                                 <p class="mb-4 text-[#5A554F] text-xs">You can either see or download details of your
                                     transaction through here.</p>
                                 <div class="flex justify-between">
+                                    <a href="./WEB - GGC Whitepaper v1.0.pdf" target="_blank">
                                     <button
                                         class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-[0.875rem] text-[#F1F1F1] rounded-lg">
                                         <img src="img/button-eye.svg" alt="">
                                         Read
                                     </button>
+                                    </a>
                                     <!-- <button
                                         class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-5 text-[#F1F1F1] rounded-lg">
                                         <img src="img/button-download.svg" alt="">
@@ -471,11 +482,13 @@
                             Check out Litepaper
                         </div>
                         <div class="flex gap-9">
-                            <button
+                            <a href="./WEB - GGC Whitepaper v1.0.pdf" target="_blank">
+                                <button
                                 class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-[0.875rem] text-[#F1F1F1] rounded-lg">
                                 <img src="img/button-eye.svg" alt="">
                                 Read
                             </button>
+                            </a>
                             <!-- <button
                                 class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-5 text-[#F1F1F1] rounded-lg">
                                 <img src="img/button-download.svg" alt="">
@@ -552,7 +565,7 @@
                 <div class="lg:w-1/3">You are one step away from this journey!</div>
             </div>
             <div class="flex justify-center">
-                <a href="#"
+                <a href="https://www.dashboard.ggcm.io/"
                     class="text-xl sm:text-6xl text-[#FEC267] drop-shadow-[0px_10px_20px_#FEC267] border-4 sm:border-[5px] border-[#FEC267] inline-flex items-center gap-3 sm:gap-20 py-2 sm:py-4 pl-6 sm:pl-16 pr-8 sm:pr-24 rounded-[20px]">
                     <img src="img/button-eye-giant.svg" alt="" class="w-[45px]">
                     Sign up today
@@ -688,7 +701,7 @@
                             fill="white" class="transition-all group-hover:fill-[#FEC267]" />
                     </svg>
                 </a>
-                <a href="#" target="_blank" class="group">
+                <a href="https://www.instagram.com/ggcm.official/?igshid=YmMyMTA2M2Y=" target="_blank" class="group">
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="transition-all group-hover:drop-shadow-[0px_10px_20px_#FEC267]">
                         <path fill-rule="evenodd" clip-rule="evenodd"
@@ -696,7 +709,7 @@
                             fill="white" class="transition-all group-hover:fill-[#FEC267]" />
                     </svg>
                 </a>
-                <a href="#" target="_blank" class="group">
+                <a href="https://twitter.com/GoldGuaranteed" target="_blank" class="group">
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="transition-all group-hover:drop-shadow-[0px_10px_20px_#FEC267]">
                         <path
@@ -704,7 +717,7 @@
                             fill="white" class="transition-all group-hover:fill-[#FEC267]" />
                     </svg>
                 </a>
-                <a href="#" target="_blank" class="group">
+                <a href="https://medium.com/@ggcmofficial" target="_blank" class="group">
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="transition-all group-hover:drop-shadow-[0px_10px_20px_#FEC267]">
                         <path
@@ -712,7 +725,7 @@
                             fill="white" class="transition-all group-hover:fill-[#FEC267]" />
                     </svg>
                 </a>
-                <a href="#" target="_blank" class="group">
+                <a href="https://discord.com/invite/N4qKuxvN" target="_blank" class="group">
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="transition-all group-hover:drop-shadow-[0px_10px_20px_#FEC267]">
                         <g clip-path="url(#clip0_102_657)">
@@ -727,7 +740,7 @@
                         </defs>
                     </svg>
                 </a>
-                <a href="#" target="_blank" class="group">
+                <a href="https://www.youtube.com/channel/UCpIqEMmIZepmzjayaoqOmdQ" target="_blank" class="group">
                     <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg"
                         class="transition-all group-hover:drop-shadow-[0px_10px_20px_#FEC267]">
                         <g clip-path="url(#clip0_102_661)">
