--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
             <div class="xl:w-1/6"></div>
             <div class="xl:w-5/6">
               <h1 class="text-3xl sm:text-6xl text-[#D8D8D8] pl-3 mb-4">
-                Best way store and transfer your
+                Best way to store and transfer your
                 <span class="text-[#FEC267]">crypto</span>!
               </h1>
               <div
@@ -672,7 +672,7 @@
                     You can either see or download details of your transaction
                     through here.
                   </p>
-                  <div class="flex justify-between">
+                  <!-- <div class="flex justify-between">
                     <a href="./Whitepaper GGCM 2022.pdf" target="_blank">
                       <button
                         class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-[0.875rem] text-[#F1F1F1] rounded-lg"
@@ -681,7 +681,7 @@
                         Read
                       </button>
                     </a>
-                  </div>
+                  </div> -->
                 </div>
                 <div class="text-center">
                   <h3 class="text-[#D8D8D8] text-3xl font-bold mb-9">
@@ -728,7 +728,7 @@
               class="flex flex-col xl:flex-row xl:items-center sm:justify-between gap-4"
             >
               <div>Check out Litepaper</div>
-              <div class="flex gap-9">
+              <div class="flex gap-9" style="z-index: 1000">
                 <a href="./Whitepaper GGCM 2022.pdf" target="_blank">
                   <button
                     class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-[0.875rem] text-[#F1F1F1] rounded-lg"
@@ -737,11 +737,6 @@
                     Read
                   </button>
                 </a>
-                <!-- <button
-                                class="border-2 border-[#4B4743] px-[1.125rem] py-1 flex items-center gap-5 text-[#F1F1F1] rounded-lg">
-                                <img src="img/button-download.svg" alt="">
-                                Download
-                            </button> -->
               </div>
             </div>
           </div>
@@ -837,7 +832,7 @@
         </div>
         <div class="flex justify-center">
           <a
-            href="https://www.dashboard.ggcm.io/"
+            href="https://dashboard.ggcm.io/auth/register"
             class="text-xl sm:text-6xl text-[#FEC267] drop-shadow-[0px_10px_20px_#FEC267] border-4 sm:border-[5px] border-[#FEC267] inline-flex items-center gap-3 sm:gap-20 py-2 sm:py-4 pl-6 sm:pl-16 pr-8 sm:pr-24 rounded-[20px]"
           >
             <img src="img/button-eye-giant.svg" alt="" class="w-[45px]" />
@@ -1014,7 +1009,11 @@
       >
         <div>2022&copy; GGCM</div>
         <div class="flex gap-3 md:gap-4 lg:gap-[60px]">
-          <a href="#" target="_blank" class="group">
+          <a
+            href="https://www.facebook.com/GGCM-Gold-Guaranteed-Coin-Mining-112589574750515"
+            target="_blank"
+            class="group"
+          >
             <svg
               width="40"
               height="40"
@@ -1033,7 +1032,7 @@
             </svg>
           </a>
           <a
-            href="https://www.instagram.com/ggcm.official/?igshid=YmMyMTA2M2Y="
+            href="https://www.instagram.com/ggcm.official/"
             target="_blank"
             class="group"
           >
@@ -1095,7 +1094,7 @@
             </svg>
           </a>
           <a
-            href="https://discord.com/invite/N4qKuxvN"
+            href="https://discord.com/invite/3smpEZtByQ"
             target="_blank"
             class="group"
           >
@@ -1122,7 +1121,7 @@
             </svg>
           </a>
           <a
-            href="https://www.youtube.com/channel/UCpIqEMmIZepmzjayaoqOmdQ"
+            href="https://www.youtube.com/channel/UC9PTPLJre243zMsTAaMPVqw"
             target="_blank"
             class="group"
           >
