--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     >
                   </li>
                   <li>
-                    <a href="https://twitter.com/GoldGuaranteed">Twitter</a>
+                    <a href="https://twitter.com/GGCMOfficial">Twitter</a>
                   </li>
                   <li><a href="mailto: info@ggcm.io">E-Mail</a></li>
                 </ul>
@@ -481,7 +481,7 @@
                       Benefit from the Future.
                     </h2>
                     <p class="mb-4">
-                      The GGCM team is a group of open-minded, enthusiast people
+                      The GGC team is a group of open-minded, enthusiast people
                       from Mongolia who are here to make it possible for anybody
                       to own gold by tokenizing it and placing it on the
                       blockchain via decentralized access. The team was led by
@@ -530,21 +530,21 @@
                       you!
                     </h2>
                     <p class="mb-6 text-xl">
-                      GGCM will hold the gold amount in reserves that
+                      GGC will hold the gold amount in reserves that
                       corresponding to 30 percent of the market value of the
                       tokens in circulation.
                     </p>
                     <p class="mb-4">
-                      GGC will protect you from the risk of losing value on your
+                      GGCM will protect you from the risk of losing value on your
                       investment as a result of fiat currency fluctuations.
                     </p>
                     <p class="mb-4">
                       Gold extracted from a Mongolian government-licensed mining
-                      project will increase the value of your GGC, providing
+                      project will increase the value of your GGCM, providing
                       fuel for actual gold mining activities.
                     </p>
                     <p class="text-sm font-semibold">
-                      70% of the mining revenue of GGC will be divided into
+                      70% of the mining revenue of GGCM will be divided into
                       shares and launched as rental NFTs: You'll be able to rent
                       GGC NFT to earn a profit from the mining shares.
                     </p>
@@ -566,7 +566,7 @@
                   <div
                     class="bg-[#E8E8E8] text-[#5A554F] rounded-[1.25rem] shadow-[0px_10px_20px_#FEC267] pt-6 sm:pt-12 pr-3 sm:pr-5 pb-3 sm:pb-6 pl-5 sm:pl-7 py-28 text-xl sm:text-3xl font-bold"
                   >
-                    As GGCM, we have a business venture in Turkey called "Gold
+                    As GGC, we have a business venture in Turkey called "Gold
                     Guaranteed Yazılım ve Teknoloji Ltd. Şti.".
                   </div>
                 </div>
@@ -716,13 +716,13 @@
               opportunity to invest in <span class="text-[#FEC267]">gold</span>.
             </p>
             <p class="mb-2">
-              The gold amount in reserves held by GGCM will be equal to 30% of
+              The gold amount in reserves held by GGC will be equal to 30% of
               the market value of the tokens in circulation. Our main goal is to
               make mining easier and more accessible to the public, so that more
               and more people can earn some profits from the current
               cryptocurrency boom. Renting GGC NFT will allow you to profit from
-              the mining shares. How? GGC's 70% mining proceeds will be split
-              into shares and issued as rental NFTs.
+              the mining shares. GGC's 70% mining proceeds will be split
+              into shares and issued as rental NFTs. How?
             </p>
             <div
               class="flex flex-col xl:flex-row xl:items-center sm:justify-between gap-4"
@@ -784,7 +784,7 @@
     <section class="py-12 xl:py-36 bg-[#020202] text-white">
       <div class="container">
         <h2 class="text-3xl sm:text-7xl mb-8 sm:mb-11">
-          How to Buy <span class="text-[#FEC267]">GGC Token</span> from
+          How to Buy <span class="text-[#FEC267]">GGCM Token</span> from
           Dashboard?
         </h2>
         <div
@@ -865,8 +865,8 @@
             asset-backed cryptocurrencies may be a good option.
           </p>
           <p class="text-[1.25rem] text-[#FEC267]">
-            GGCM's mission is to tokenize gold and make it more accessible to
-            individuals through the blockchain. GGCM has all of the necessary
+            GGC's mission is to tokenize gold and make it more accessible to
+            individuals through the blockchain. GGC has all of the necessary
             permits and authorization for mining ventures under Mongolian law.
           </p>
         </div>
@@ -1054,7 +1054,7 @@
             </svg>
           </a>
           <a
-            href="https://twitter.com/GoldGuaranteed"
+            href="https://twitter.com/GGCMOfficial"
             target="_blank"
             class="group"
           >
