--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <div
       class="w-100 h-screen flex justify-center flex-col items-center bg-[#1C1C1C]"
       id="loading"
+      style="overflow: hidden"
     >
       <lottie-player
         src="https://assets10.lottiefiles.com/packages/lf20_sgvdi18h.json"
@@ -200,6 +201,7 @@
           id="s1-video"
         ></video>
         <div class="container h-full relative">
+          <div></div>
           <div
             class="absolute left-1/2 xl:left-auto -translate-x-1/2 xl:-translate-x-0 top-1/2 -translate-y-1/2 xl:right-40 w-[300px] xl:w-[400px] h-[330px] xl:h-[400px] bg-[rgba(90,85,79,0.2)] rounded-[1.25rem]"
             id="s1-coin"
@@ -547,6 +549,7 @@
                   <div class="lg:w-1/3">
                     <div
                       class="bg-[#E8E8E8] text-[#5A554F] rounded-[1.25rem] shadow-[0px_10px_20px_#FEC267] pt-6 sm:pt-12 pr-3 sm:pr-5 pb-3 sm:pb-6 pl-5 sm:pl-7"
+                      id="text-1-right"
                     >
                       <h2 class="mb-7 text-xl sm:text-3xl font-bold">
                         Invest in <span class="text-[#FEC267]">Mining</span>,
@@ -594,7 +597,7 @@
                     <span class="text-[#FEC267]">gold</span> to the digital
                     age."
                   </div>
-                  <div class="lg:w-1/3">
+                  <div class="lg:w-1/3" id="text-2-right">
                     <div
                       class="bg-[#E8E8E8] text-[#5A554F] rounded-[1.25rem] shadow-[0px_10px_20px_#FEC267] pt-6 sm:pt-12 pr-3 sm:pr-5 pb-3 sm:pb-6 pl-5 sm:pl-7"
                     >
@@ -659,7 +662,7 @@
                     <span class="text-[#FEC267]">GGCM</span>'s upcoming features
                     and utilities.
                   </div>
-                  <div class="lg:w-1/3">
+                  <div class="lg:w-1/3" id="text-3-right">
                     <div
                       class="bg-[#E8E8E8] text-[#5A554F] rounded-[1.25rem] shadow-[0px_10px_20px_#FEC267] pt-6 sm:pt-12 pr-3 sm:pr-5 pb-3 sm:pb-6 pl-5 sm:pl-7 py-28 text-xl sm:text-3xl font-bold"
                     >
@@ -682,16 +685,25 @@
                     <span class="text-[#FEC267]">safeguard</span> your
                     investments.
                   </div>
-                  <div class="lg:w-1/3">
+                  <div class="lg:w-1/3" id="text-4-right">
                     <div
                       class="bg-[#E8E8E8] text-[#5A554F] rounded-[1.25rem] shadow-[0px_10px_20px_#FEC267] pt-6 sm:pt-12 pr-3 sm:pr-5 pb-3 sm:pb-6 pl-5 sm:pl-7"
                     >
                       <h2 class="mb-2 text-xl sm:text-3xl font-bold">
-                        <img
+                        <!-- <img
                           src="img/wallet.svg"
                           alt=""
+                        
+                        /> -->
+                        <lottie-player
+                          src="https://assets6.lottiefiles.com/packages/lf20_aotntu0t.json"
+                          background="transparent"
+                          speed="1"
+                          style="width: 80px; height: 80px"
+                          loop
+                          autoplay
                           class="float-right mb-5 sm:mb-10 ml-5 sm:ml-10 w-[80px] sm:h-auto"
-                        />
+                        ></lottie-player>
                         <span class="text-[#FEC267]">GGCM</span> Pay combines
                         the best features of a
                         <span class="text-[#FEC267]"
