--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                     >
                       <a
                         href="#watch"
-                        class="hover:drop-shadow-[0px_10px_20px_#FEC267]"
+                        class="inline-block pt-16 hover:drop-shadow-[0px_10px_20px_#FEC267]"
                       >
                         <button
                           class="border-[3px] border-[#FEC267] text-[#FEC267] rounded-[0.3125rem] flex items-center justify-center gap-6 px-5 py-2 ml-auto mb-2"
