--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
 
   <body>
     
-    <!-- <div
-    class="w-100 h-screen flex justify-center flex-col items-center bg-[#1C1C1C]"
+    <div
+    class="w-100 h-screen flex justify-center flex-col items-center bg-[#1C1C1C] relative z-20"
     id="loading"
-    style="overflow: hidden"
+    style="position: relative; z-index: 99999;"
+    
   >
     <lottie-player
       src="https://assets10.lottiefiles.com/packages/lf20_sgvdi18h.json"
@@ -45,7 +46,7 @@
     >
       We’ve prepared something great for you...
     </h1>
-  </div> -->
+  </div>
   <!-- <div id="page" class="hidden"> -->
       <header class="fixed top-0 inset-x-0 z-20 transition">
         <div class="container flex justify-between items-center relative py-6">
