Remove unnecessary codes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     
     <div
-    class="w-100 h-screen flex justify-center flex-col items-center bg-[#1C1C1C] relative z-20"
+    class="w-100 h-screen flex justify-center flex-col items-center bg-[#1C1C1C]"
     id="loading"
     style="position: relative; z-index: 99999;"
     
@@ -47,7 +47,6 @@
       We’ve prepared something great for you...
     </h1>
   </div>
-  <!-- <div id="page" class="hidden"> -->
       <header class="fixed top-0 inset-x-0 z-20 transition">
         <div class="container flex justify-between items-center relative py-6">
           <a href="index.html" id="logo">
@@ -1326,6 +1325,5 @@
           <div>Made with <span class="text-[#FEC267]">KAF</span></div>
         </div>
       </footer>
-      <!-- </div> -->
   </body>
 </html>
